# pipiti

./: .flake8  README.rst  pyproject.toml
src/pipiti/: tui.py
