[tool.poetry]
name = "pipiti"
version = "0.1.0"
description = "An ncurses text-based user interface (TUI) for viewing/editing AMD GPU powerplay tables. Uses amdgpu-pptable library by amezin for backend parsing."
authors = [
    "rdugan <1779672+rdugan@users.noreply.github.com>"
]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/rdugan/pipiti"
repository = "https://github.com/rdugan/pipiti"
keywords = ["amdgpu", "ppt", "powerplay", "editor", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Hardware"
]
packages = [
    { include = "pipiti", from = "src" },
]
    
[tool.poetry.dependencies]
python = ">=3.6"
amdgpu-pptable = ">=0.9.2"
# npyscreen = { path = "../npyscreen/" }
npyscreen = { git = "https://github.com/rdugan/npyscreen.git", branch = "develop" }

[tool.poetry.dev-dependencies]
ctypeslib2 = "^2.2.2"
black = "^19.10b0"
flake8 = "^3.7.9"
rope = "^0.16.0"
pydocstyle = "^5.0.2"
python-language-server = { git = "https://github.com/rdugan/python-language-server.git", branch = "develop" }
pytest = "^5.3.5"

[tool.poetry.scripts]
pipiti = "pipiti.tui:main"

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
